devops/base/jenkins/clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-cluster
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: jenkins-agent
      port: 32000
      targetPort: 32000
      protocol: TCP
    - name: jnlp_port
      port: 50000
      targetPort: 50000
      protocol: TCP
  selector:
    app: jenkins-server
  type: ClusterIP
