devops/base/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
    - port: 8080
  selector:
    app: jenkins
  type: ClusterIP
