devops/base/jenkins/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jenkins-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: jenkins
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              # The Kubernetes control plane sets an immutable label kubernetes.io/metadata.name on all namespaces, the value of the label is the namespace name.
              # While NetworkPolicy cannot target a namespace by its name with some object field, you can use the standardized label to target a specific namespace.
              # https://kubernetes.io/docs/concepts/services-networking/network-policies/
              kubernetes.io/metadata.name: devops-tools
      ports:
        - protocol: TCP
          port: 32000

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      # ports:
      #   - protocol: TCP
      #     port: 3005
